# Minimal-Money-Momentum-Monitor

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  alerts.js  backend.js  csv.js  fixedIncome.js  format.js  model.js  ofx.js  plan.js  quotes.js  report.js  styles.css  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Expenses.jsx  Investments.jsx  Monitoring.jsx  Planning.jsx  Report.jsx  Settings.jsx  charts.jsx  ui.jsx
